# wizcoin

./: test.py  test.xlsx
wizcoin/: LICENSE  README.md  code_of_conduct.md  pyproject.toml  setup.py  test.py  wizcoin.py
wizcoin/docs/: conf.py
wizcoin/movetest/: README.txt
wizcoin/src/wizcoin/: __init__.py
